Fixing Navbar size on Mobile

--- a/themes/alloc/sass/mobile.sass
+++ b/themes/alloc/sass/mobile.sass
@@ -3,6 +3,7 @@
     .icon
         display: inline
         padding: 1rem 1rem
+        font-size: 1.5rem
 
     .footer
         font-size: 0.6rem
@@ -14,7 +15,8 @@
 
     .navitems
         flex-flow: column nowrap
-        justify-content: left
+        justify-content: left  
+        font-size: 1.5rem
 
     .navitems a
         text-align: left
